syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service.Messages";
import public "Pattern.proto";

message GetPatterns {
    string id = 1;
    repeated Pattern patterns = 2;
}

